<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBgColor"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cqwe"
        android:layout_width="369dp"
        android:layout_height="142dp"
        android:background="@color/BgColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.598">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="328dp"
            android:layout_height="33dp"
            android:fontFamily="@font/advent_pro_bold"
            android:text="@string/a1"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.235"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.197"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="372dp"
        android:layout_height="133dp"
        android:background="@color/BgColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.391">

        <Button
            android:id="@+id/button17"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="84dp"
            android:layout_height="34dp"
            android:text="Офис"
            android:textColor="#000000"
            android:textSize="10sp"
            android:typeface="sans"
            app:cornerRadius="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.614"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.494"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button18"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="84dp"
            android:layout_height="35dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="48dp"
            android:text="Дом"
            android:textColor="#000000"
            android:textSize="10sp"
            android:typeface="sans"
            app:cornerRadius="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/advent_pro_bold"
            android:text="@string/bn"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.101"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.144" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="22dp"
            android:layout_height="22dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.957"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.144"
            app:srcCompat="@drawable/ic__1111111"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/button5"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="84dp"
            android:layout_height="34dp"
            android:text="От меня"
            android:textColor="#000000"
            android:textSize="10sp"
            android:typeface="sans"
            app:cornerRadius="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.291"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.494"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button19"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="84dp"
            android:layout_height="34dp"
            android:layout_marginStart="56dp"
            android:layout_marginBottom="12dp"
            android:text="ко мне"
            android:textColor="#000000"
            android:textSize="10sp"
            android:typeface="sans"
            app:cornerRadius="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button20"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="84dp"
            android:layout_height="34dp"
            android:layout_marginEnd="140dp"
            android:layout_marginBottom="12dp"
            android:text="офис"
            android:textColor="#000000"
            android:textSize="10sp"
            android:typeface="sans"
            app:cornerRadius="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button21"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="84dp"
            android:layout_height="34dp"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="50dp"
            android:text="дом"
            android:textColor="#000000"
            android:textSize="10sp"
            android:typeface="sans"
            app:cornerRadius="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/button20"
            app:layout_constraintTop_toBottomOf="@+id/button17"
            app:layout_constraintVertical_bias="0.25"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="63dp"
            android:layout_height="23dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="52dp"
            android:text="Откуда:"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="53dp"
            android:layout_height="37dp"
            android:layout_marginTop="92dp"
            android:layout_marginEnd="300dp"
            android:text="Куда:"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/caaa"
        android:layout_width="396dp"
        android:layout_height="114dp"
        android:background="@color/BgColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="145dp"
            android:layout_height="50dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/a2"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.438"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="114dp"
            android:layout_height="27dp"
            android:fontFamily="@font/advent_pro_bold"
            android:text="@string/fb"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.39"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.816" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="86dp"
            android:layout_height="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.051"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.47"
            tools:srcCompat="@tools:sample/avatars"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout11"
        android:layout_width="376dp"
        android:layout_height="36dp"
        android:background="@color/BgColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.246">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="31dp"
            android:layout_height="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.954"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_icon"
            tools:ignore="ContentDescription,MissingConstraints" />

        <TextView
            android:id="@+id/test"
            android:layout_width="289dp"
            android:layout_height="18dp"
            android:fontFamily="@font/open_sans"
            android:gravity="center"
            android:text="@string/feds"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.085"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.693"
        app:srcCompat="@drawable/ic_rectangle_51"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="280dp"
        android:layout_height="24dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/tyu"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.695" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="39dp"
        android:layout_height="50dp"
        android:contentDescription="@string/a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="18dp"
        android:layout_height="19dp"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/button"
        app:srcCompat="@drawable/ic_vector"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/button22"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="45dp"
        android:layout_height="55dp"
        android:contentDescription="@string/a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.771" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/button22"
        app:layout_constraintEnd_toEndOf="@+id/button22"
        app:layout_constraintStart_toStartOf="@+id/button22"
        app:layout_constraintTop_toTopOf="@+id/button22"
        app:srcCompat="@drawable/ic__123123" />

</androidx.constraintlayout.widget.ConstraintLayout>
